feat: implement method payment and transactions
